change dart sdk version to. sdk: '>=2.18.2 <3.0.0' from  ">=2.1.0 <3.0.0"

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,8 @@ repository: https://gitlab.com/ivanjpg/native_screenshot.git
 issue_tracker: https://gitlab.com/ivanjpg/native_screenshot/-/issues
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.18.2 <3.0.0'
+  #sdk: ">=2.1.0 <3.0.0"
   flutter: ">=1.10.0"
 
 dependencies:
